// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`tool parameters JSON Schema (wire shape) apply_patch 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "patchText": {
      "description": "描述所有要执行更改的完整补丁文本",
      "type": "string",
    },
  },
  "required": [
    "patchText",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) bash 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "command": {
      "description": "要执行的 Shell 命令字符串",
      "type": "string",
    },
    "timeout": {
      "description": "可选超时时间（毫秒）",
      "exclusiveMinimum": 0,
      "maximum": 9007199254740991,
      "minimum": -9007199254740991,
      "type": "integer",
    },
    "workdir": {
      "description": "运行命令的工作目录；默认为当前目录。请使用此字段，而不是 cd 命令。",
      "type": "string",
    },
  },
  "required": [
    "command",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) edit 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "filePath": {
      "description": "要修改的文件绝对路径",
      "type": "string",
    },
    "newString": {
      "description": "用于替换的文本（必须与 oldString 不同）",
      "type": "string",
    },
    "oldString": {
      "description": "要替换的文本",
      "type": "string",
    },
    "replaceAll": {
      "description": "替换 oldString 的所有出现位置（默认为 false）",
      "type": "boolean",
    },
  },
  "required": [
    "filePath",
    "oldString",
    "newString",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) glob 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "path": {
      "description": "要搜索的目录；未指定时使用当前工作目录。省略此字段即可使用默认目录，不要填写 undefined 或 null。",
      "type": "string",
    },
    "pattern": {
      "description": "用于匹配文件的 glob 模式",
      "type": "string",
    },
  },
  "required": [
    "pattern",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) grep 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "include": {
      "description": "要包含的文件模式（例如 *.js、*.{ts,tsx}）",
      "type": "string",
    },
    "path": {
      "description": "要搜索的目录；默认为当前工作目录",
      "type": "string",
    },
    "pattern": {
      "description": "要搜索文件内容的正则表达式模式",
      "type": "string",
    },
  },
  "required": [
    "pattern",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) invalid 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "error": {
      "type": "string",
    },
    "tool": {
      "type": "string",
    },
  },
  "required": [
    "tool",
    "error",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) lsp 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "character": {
      "description": "字符偏移量（从 1 开始，与编辑器显示一致）",
      "maximum": 9007199254740991,
      "minimum": 1,
      "type": "integer",
    },
    "filePath": {
      "description": "文件的绝对或相对路径",
      "type": "string",
    },
    "line": {
      "description": "行号（从 1 开始，与编辑器显示一致）",
      "maximum": 9007199254740991,
      "minimum": 1,
      "type": "integer",
    },
    "operation": {
      "description": "要执行的 LSP 操作",
      "enum": [
        "goToDefinition",
        "findReferences",
        "hover",
        "documentSymbol",
        "workspaceSymbol",
        "goToImplementation",
        "prepareCallHierarchy",
        "incomingCalls",
        "outgoingCalls",
      ],
      "type": "string",
    },
    "query": {
      "description": "workspaceSymbol 的搜索查询；空字符串请求全部符号",
      "type": "string",
    },
  },
  "required": [
    "operation",
    "filePath",
    "line",
    "character",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) plan 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {},
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) question 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "questions": {
      "description": "要询问的问题",
      "items": {
        "properties": {
          "header": {
            "description": "非常短的标签（最多 30 个字符）",
            "type": "string",
          },
          "multiple": {
            "description": "允许选择多个选项",
            "type": "boolean",
          },
          "options": {
            "description": "可用选项",
            "items": {
              "properties": {
                "description": {
                  "description": "选项说明",
                  "type": "string",
                },
                "label": {
                  "description": "显示文本（1-5 个词，简洁）",
                  "type": "string",
                },
              },
              "required": [
                "label",
                "description",
              ],
              "type": "object",
            },
            "type": "array",
          },
          "question": {
            "description": "完整问题",
            "type": "string",
          },
        },
        "required": [
          "question",
          "header",
          "options",
        ],
        "type": "object",
      },
      "type": "array",
    },
  },
  "required": [
    "questions",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) read 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "filePath": {
      "description": "要读取的文件或目录的绝对路径",
      "type": "string",
    },
    "limit": {
      "description": "要读取的最大行数（默认为 2000）",
      "maximum": 9007199254740991,
      "minimum": 0,
      "type": "integer",
    },
    "offset": {
      "description": "开始读取的行号（从 1 开始）",
      "maximum": 9007199254740991,
      "minimum": 0,
      "type": "integer",
    },
  },
  "required": [
    "filePath",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) skill 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "name": {
      "description": "可用技能列表中的技能名称",
      "type": "string",
    },
  },
  "required": [
    "name",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) task 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "background": {
      "description": "在后台运行代理；完成后会收到通知。不要休眠、轮询或主动检查进度",
      "type": "boolean",
    },
    "command": {
      "description": "触发此任务的命令",
      "type": "string",
    },
    "description": {
      "description": "任务的简短说明（3-5 个词）",
      "type": "string",
    },
    "prompt": {
      "description": "代理要执行的任务",
      "type": "string",
    },
    "subagent_type": {
      "description": "此任务要使用的专用代理类型",
      "type": "string",
    },
    "task_id": {
      "description": "仅在要恢复之前的任务时设置；传入之前的 task_id 可继续同一代理会话，而不是创建新会话",
      "type": "string",
    },
  },
  "required": [
    "description",
    "prompt",
    "subagent_type",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) todo 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "todos": {
      "description": "更新后的任务列表",
      "items": {
        "properties": {
          "content": {
            "description": "任务的简要说明",
            "type": "string",
          },
          "priority": {
            "description": "任务优先级：high、medium、low",
            "type": "string",
          },
          "status": {
            "description": "任务的当前状态：pending、in_progress、completed、cancelled",
            "type": "string",
          },
        },
        "required": [
          "content",
          "status",
          "priority",
        ],
        "type": "object",
      },
      "type": "array",
    },
  },
  "required": [
    "todos",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) webfetch 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "format": {
      "default": "markdown",
      "description": "返回内容的格式（text、markdown 或 html）；默认为 markdown",
      "enum": [
        "text",
        "markdown",
        "html",
      ],
      "type": "string",
    },
    "timeout": {
      "description": "可选超时时间（秒，最大 120）",
      "type": "number",
    },
    "url": {
      "description": "要获取内容的 URL",
      "type": "string",
    },
  },
  "required": [
    "url",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) websearch 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "contextMaxCharacters": {
      "description": "为 LLM 优化的上下文字符串最大字符数（默认 10000）",
      "type": "number",
    },
    "livecrawl": {
      "description": "实时抓取模式：fallback 在缓存不可用时备用，preferred 优先实时抓取",
      "enum": [
        "fallback",
        "preferred",
      ],
      "type": "string",
    },
    "numResults": {
      "description": "要返回的搜索结果数量（默认 8）",
      "type": "number",
    },
    "query": {
      "description": "网页搜索查询",
      "type": "string",
    },
    "type": {
      "description": "搜索类型：auto（均衡，默认）、fast（快速）或 deep（全面）",
      "enum": [
        "auto",
        "fast",
        "deep",
      ],
      "type": "string",
    },
  },
  "required": [
    "query",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) write 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "content": {
      "description": "要写入文件的内容",
      "type": "string",
    },
    "filePath": {
      "description": "要写入文件的绝对路径（必须是绝对路径）",
      "type": "string",
    },
  },
  "required": [
    "content",
    "filePath",
  ],
  "type": "object",
}
`;
